# my_web_ui

./: All_API_Route.json  Cargo.toml  README.md
src/: main.rs
static/: app.js  index.html  style.css  tagcomplete-data.json  tagcomplete-sources.json  tagcomplete.js
